elinks (0.12~20080127-1) experimental; urgency=low

  * Remove patches (fixes already present in 0.12)
    + 01_asciidoc7compatible.diff
    + 04_380347-entity_cache-overflow.diff
    + 05_257762-transparency-off.diff
  * Refresh and update rest of the patches for 0.12
  * Modify save-stamp and clean-patched to save/restore files that are
    modified during build

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Fri, 01 Feb 2008 18:37:00 +0530

elinks (0.11.3-4) unstable; urgency=low

  * Update 02_setup-bugs-FSSTND.diff to prevent changing contrib/elinks.conf
    (it is not used anymore).

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Jan 2008 21:49:04 +0530

elinks (0.11.3-3) unstable; urgency=low

  * Remove 06_elinks.conf-parse-error.diff and use a minimal elinks.conf file
    with only the user_agent setting.  Thanks giggz <giggzounet@gmail.com> for
    the bug report and Kalle Olavi Niemitalo for suggestion (Closes: #460912)
  * Rename patch 01_asciidoc-escape-FTBFS as 01_asciidoc7compatible to add a
    "-a asciidoc7compatible" to ASCIIDOC_FLAGS.  Thanks Kalle Olavi Niemitalo
    <kon@iki.fi> for the suggestion.
  * debian/copyright: Add 2008 to Debian packaging Copyright 'years'.
  * debian/control: Remove superfluous ;a=summary suffix from gitweb URL in
    Vcs-Browser:
  * Really install elinks.desktop desktop file for elinks and elinks-lite
    (remove elinks-lite.desktop, it is identical to elinks.desktop).
  * Changed all patches from "diff -urNad" to "git diff".  This will make it
    easier to maintain the patches.  Just modify the code in place and do a
    "git diff > debian/patches/0X_foo.diff"
  * Pass --enable-leds to configure.  Set ui.leds.enable to 0 by default via
    06_459467_ui.leds.enable_0.diff, this solves #459467 better.  Thanks to
    أحمد المحمودي (Ahmed El-Mahmoudy) for the suggestion.

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Thu, 24 Jan 2008 17:38:29 +0530

elinks (0.11.3-2) unstable; urgency=low
