@@ -3,7 +3,7 @@ Section: web
 Priority: optional
 Maintainer: Y Giridhar Appaji Nag <giridhar@appaji.net>
 Uploaders: Moritz Muehlenhoff <jmm@debian.org>
-Build-Depends: debhelper (>= 5), libgnutls-dev, libgpmg1-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], liblua50-dev, liblualib50-dev, libbz2-dev, libexpat1-dev (>= 1.95.6), libperl-dev, autotools-dev, gettext, asciidoc, xmlto, docbook-utils, perl
+Build-Depends: debhelper (>= 5), libgnutls-dev, libgpmg1-dev [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64], liblua50-dev, liblualib50-dev, libbz2-dev, libexpat1-dev (>= 1.95.6), libperl-dev, libsmbclient-dev, guile-1.8-dev | guile-1.6-dev, python-dev, ruby1.8-dev, libmozjs-dev, autotools-dev, gettext, asciidoc, xmlto, docbook-utils, perl
 Standards-Version: 3.7.3
 Homepage: http://elinks.or.cz/
 Vcs-Git: git://git.debian.org/git/collab-maint/elinks.git
