@@ -7,7 +7,13 @@ more stable because of the few feature change. YMMW.
 
 				* * *
 
- -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Thu, 03 Jan 2008 17:01:37 +0530
+Please note that the version of ELinks in Debian experimental has
+several features enabled that are considered partially implemented,
+unstable and even know to have serious bugs.  This has been done for
+enthusiastic ELinks users who would like to report and help iron out
+upstream bugs.  Use this at your own risk.
+
+ -- Y Giridhar Appaji Nag <giridhar@appaji.net> Sat, 02 Feb 2008 20:43:57 +0530
 
 Do not forget to setup after the first install: press F9, go to the Setup
 menu, and set Linux console, default display character set and others. (An
